# gomocup_engine

./: README.md  __init__.py  engine.py  pyproject.toml  setup.py
build-rapfi/: Dockerfile  build.sh
engine/: pbrain-rapfi-linux-clang-avx2  pbrain-rapfi-linux-clang-avx512
examples/: play_console.py
nodejs/: README.md
nodejs/examples/: play-console.js
nodejs/src/: gomocup-engine.js
python/: README.md
python/gomocup_engine/examples/: play_console.py
