[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gomocup_engine"
version = "1.0.0"
description = "Python wrapper for Gomocup-protocol Gomoku/Renju AI engines"
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["gomocup_engine*"]
